--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ endorsed.classpath=
 excludes=
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\norhan\\Videos\\fontawesomefx-8.9.jar
 file.reference.jfoenix.jar=C:\\Users\\norhan\\Videos\\jfoenix.jar
+file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Users\\norhan\\Videos\\mysql-connector-java-5.1.44-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix.jar}:\
-    ${file.reference.fontawesomefx-8.9.jar}
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
