--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/Model2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.14.jar-1=C:\\Users\\norhan\\Videos\\controlsfx-8.40.14.jar
 file.reference.fontawesomefx-8.9.jar=C:\\Users\\norhan\\Videos\\fontawesomefx-8.9.jar
 file.reference.jfoenix.jar=C:\\Users\\norhan\\Videos\\jfoenix.jar
 file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Users\\norhan\\Videos\\mysql-connector-java-5.1.44-bin.jar
@@ -40,15 +41,16 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.jfoenix.jar}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
-    ${file.reference.mysql-connector-java-5.1.44-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
+    ${file.reference.controlsfx-8.40.14.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -68,10 +70,9 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${java.home}/lib/jfxrt.jar:\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
+    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
@@ -108,7 +109,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
